--- a/model.ipynb
+++ b/model.ipynb
@@ -46,7 +46,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Defining a base directory containing all the class labels\n",
     "BASE_DIR = \"./Datasets/Sign Language for Alphabets\"\n",
+    "# Defining all the class labesl in the dataset\n",
+    "# Here the names of the folders are treated as class labels\n",
     "CLASSES = [\"a\",\"b\",\"c\",\"d\",\"e\",\"f\",\"g\",\"h\",\"i\",\"j\",\"k\",\"l\",\"m\",\"n\",\"o\",\"p\",\"q\",\"r\",\"s\",\"t\",\"u\",\"v\",\"w\",\"x\",\"y\",\"z\",\"unknown\"]"
    ]
   },
@@ -75,15 +78,25 @@
     }
    ],
    "source": [
+    "# Instanciting a list object to store image arrays along with their class labels\n",
     "data = list()\n",
     "\n",
+    "# Iterating through each class labels\n",
     "for items in tqdm(CLASSES):\n",
+    "    # Defining a path to all the unique folders which behave as class labels\n",
     "    path = os.path.join(BASE_DIR, items)\n",
+    "    # Defining the label for each class as per their index in list object CLASSES\n",
     "    label = CLASSES.index(items)\n",
+    "    # Iterating through each folder which beahve as unique class labels\n",
     "    for img in os.listdir(path):\n",
+    "        # Defining a path for each image\n",
     "        img_path = os.path.join(path, img)\n",
+    "        # Reading images using opencv\n",
+    "        # Each image is converted into an array representation\n",
     "        img_arr = cv2.imread(img_path)\n",
+    "        # Using opencv to resize image arrays to 80X80 dimensions\n",
     "        img_arr = cv2.resize(img_arr, (80, 80))\n",
+    "        # Storing array of each image to list object along with their class labels\n",
     "        data.append([img_arr, label])"
    ]
   },
