--- a/model.ipynb
+++ b/model.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,14 +55,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 26/26 [00:35<00:00,  1.37s/it]\n"
+      "100%|██████████| 26/26 [01:28<00:00,  3.40s/it]\n"
      ]
     }
    ],
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,6 +126,101 @@
     "# If we train each categories end-to-end one after another our model may learn categories incorrectly\n",
     "\n",
     "random.shuffle(data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[array([[[133, 133, 133],\n",
+       "         [138, 138, 138],\n",
+       "         [141, 141, 141],\n",
+       "         ...,\n",
+       "         [131, 131, 131],\n",
+       "         [128, 128, 128],\n",
+       "         [126, 126, 126]],\n",
+       " \n",
+       "        [[136, 136, 136],\n",
+       "         [141, 141, 141],\n",
+       "         [143, 143, 143],\n",
+       "         ...,\n",
+       "         [132, 132, 132],\n",
+       "         [129, 129, 129],\n",
+       "         [126, 126, 126]],\n",
+       " \n",
+       "        [[138, 138, 138],\n",
+       "         [142, 142, 142],\n",
+       "         [143, 143, 143],\n",
+       "         ...,\n",
+       "         [133, 133, 133],\n",
+       "         [130, 130, 130],\n",
+       "         [128, 128, 128]],\n",
+       " \n",
+       "        ...,\n",
+       " \n",
+       "        [[124, 124, 124],\n",
+       "         [125, 125, 125],\n",
+       "         [128, 128, 128],\n",
+       "         ...,\n",
+       "         [125, 125, 125],\n",
+       "         [122, 122, 122],\n",
+       "         [120, 120, 120]],\n",
+       " \n",
+       "        [[122, 122, 122],\n",
+       "         [124, 124, 124],\n",
+       "         [126, 126, 126],\n",
+       "         ...,\n",
+       "         [123, 123, 123],\n",
+       "         [120, 120, 120],\n",
+       "         [118, 118, 118]],\n",
+       " \n",
+       "        [[121, 121, 121],\n",
+       "         [123, 123, 123],\n",
+       "         [125, 125, 125],\n",
+       "         ...,\n",
+       "         [121, 121, 121],\n",
+       "         [119, 119, 119],\n",
+       "         [116, 116, 116]]], dtype=uint8),\n",
+       " 5]"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# list x is used to store features of the image\n",
+    "# list y is used to store class labels of the image\n",
+    "x, y = list(), list()\n",
+    "\n",
+    "for features, labels in data:\n",
+    "    x.append(features)\n",
+    "    y.append(labels)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Converting lists x and y to numpy arrays\n",
+    "x = np.array(x)\n",
+    "y = np.array(y)"
    ]
   },
   {
