--- a/model.ipynb
+++ b/model.ipynb
@@ -107,6 +107,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Data Preprocessing"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
@@ -221,6 +228,18 @@
     "# Converting lists x and y to numpy arrays\n",
     "x = np.array(x)\n",
     "y = np.array(y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Saving our data to pickle files\n",
+    "# 'wb' stands for write in binary\n",
+    "pickle.dump(x, open('features.pkl', 'wb'))\n",
+    "pickle.dump(x, open('labels.pkl', 'wb'))"
    ]
   },
   {
