--- a/model.ipynb
+++ b/model.ipynb
@@ -201,7 +201,7 @@
     }
    ],
    "source": [
-    "data[0]"
+    "# data[0]"
    ]
   },
   {
@@ -228,6 +228,25 @@
     "# Converting lists x and y to numpy arrays\n",
     "x = np.array(x)\n",
     "y = np.array(y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The shape of the data features is: (39000, 80, 80, 3)\n",
+      "The shape of the data class labels is: (39000,)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"The shape of the data features is:\", x.shape)\n",
+    "print(\"The shape of the data class labels is:\", y.shape)"
    ]
   },
   {
